# RNAMultiOmics

./: .gitignore  pyproject.toml  setup.py
src/: __init__.py
src/multiomics/: __init__.py  _annotations.py  load.py
src/multiomics/expression/: __init__.py
src/multiomics/plotting/: __init__.py  _rank_plot.py  _utils.py  _volcano.py  volcano.py
src/multiomics/splicing/: __init__.py
src/multiomics/splicing/rmats/: __init__.py  extract_PSI_count.py  get_novel_ID.py  rmats_filtering.py  rmats_load.py
