[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RNAMultiOmics"
version = "0.0.2"
description = "A multi-omics analytic framework to study RNA dynamics"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
authors = [
    { name = "Abe Arab", email = "abarbiology@gamil.com" }
]
maintainers = [
    { name = "Abe Arab", email = "abarbiology@gamil.com" }
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
urls = { "Homepage" = "https://github.com/abearab/RNAMultiOmics" }

[tool.setuptools.packages.find]
where = ["src"]